# indexmod

./: .gitignore  Cargo.toml  X.xlsx  Z as main file.xlsx  Z.xlsx  flake.nix  generate.sh  output(81).xlsx  output.xlsx  rows.txt  todo.norg
.github/workflows/: ci.yml
assets/: elems.js
assets/css/: merge.css  reply.css
assets/js/: merge.js  reply.js  search.js  utils.js
indexmod/: Cargo.toml
indexmod-web/: Cargo.toml
indexmod-web/assets/css/: search.css
indexmod-web/assets/js/: reply.js
indexmod-web/src/: reply.rs
indexmod-web/src/routes/search/: template_download.rs
indexmod-web/templates/: merge.html  reply.html
search-test/assets/js/: merge.js
search-test/src/: api.rs  lib.rs  search.rs
search-test/src/routes/: mod.rs
search-test/src/routes/search/: template_download.rs
search-test/templates/: merge.html  search.html
src/: api.rs  error.rs  excel_merge.rs  lib.rs  main.rs  merge.rs  reply.rs  search.rs  whatever.rs
src/routes/: merge.rs  mod.rs  reply.rs  search.rs
src/routes/search/: mod.rs
templates/: index.html  merge.html  new_file.html  reply.html  search.html
tests/: search_1.xlsx  search_2.xlsx  search_3.xlsx  search_4.xlsx  test_search.rs
text/: MOCK_DATA(1).xlsx.txt  MOCK_DATA.xlsx.txt  file_example_XLS_10.xls.txt
