[package]
authors = ["Beshoy Kamel <beshoykamel391@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "excel-merge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros", "multipart"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
calamine = "0.22.1"
chrono = "0.4.31"
rust_xlsxwriter = "0.54.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["cors"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.75"

[profile.release]
lto = true
codegen-units = 1
