[package]
authors = ["Beshoy Kamel <beshoykamel391@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "excel-merge"
version = "4.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros", "multipart", "tracing"] }
axum-extra = { version = "0.9.3", features = ["query"] }
axum-macros = "0.3.8"
calamine = { git = "https://github.com/tafia/calamine", branch = "master" }
chrono = "0.4.31"
itertools = "0.11.0"
rust_xlsxwriter = { version = "0.54.0", features = ["zlib"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
size = "0.4.1"
thiserror = "1.0.61"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.4.1", features = ["v4"] }
zip = { git = "https://github.com/zip-rs/zip2" }

[profile.release]
lto = true
# debug = true
codegen-units = 1

[profile.release-with-debug]
inherits="release"
# debug = true
